--- a/views/task/index.ejs
+++ b/views/task/index.ejs
@@ -16,7 +16,7 @@
     
     <div class="container">
         <hr>
-        <h3 style="text-align: center;"><a href="/task">所有工作</a><sup><span class="badge bg-info ms-1"><%= tasks.length %></span></sup></h3></h3>        
+        <h3><a href="/task">所有工作</a><sup><span class="badge bg-info ms-1"><%= tasks.length %></span></sup></h3></h3>        
                 
         <% if (locals.tasks.length > 0 ) { %>  
             <table class="table table-bordered table-striped table-sm">
