--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,14 +10,14 @@
             </div> -->
             <div class="col col-sm-auto">
                 <!-- Button trigger modal -->
-                <button class="btn btn-default btn-sm" data-bs-toggle="modal" data-bs-target="#staticBackdrop">登出</button>
+                <button class="btn btn-default btn-sm" data-bs-toggle="modal" data-bs-target="#staticBackdropLogout">登出</button>
             </div>
         </div>
     </div>
 </h3>
 
 <!-- Modal -->
-<div class="modal fade modal-sm" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade modal-sm" id="staticBackdropLogout" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
@@ -28,8 +28,8 @@
             登出 <%= locals.taname.charAt(0).toUpperCase() + locals.taname.slice(1)%> ?
         </div>
         <div class="modal-footer">
-            <button type="button" id="btn-ok" class="btn btn-primary" data-bs-dismiss="modal">Ok</button>
-            <button type="button" id="btn-cancel" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" id="btn-ok" class="btn btn-primary btn-sm" data-bs-dismiss="modal">Ok</button>
+            <button type="button" id="btn-cancel" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
         </div>
       </div>
     </div>
