--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,8 +28,8 @@
             登出 <%= locals.taname.charAt(0).toUpperCase() + locals.taname.slice(1)%> ?
         </div>
         <div class="modal-footer">
-            <button type="button" id="btn-ok" class="btn btn-primary btn-sm" data-bs-dismiss="modal">Ok</button>
-            <button type="button" id="btn-cancel" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" id="btn-ok" class="btn btn-primary" data-bs-dismiss="modal">Ok</button>
+            <button type="button" id="btn-cancel" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         </div>
       </div>
     </div>
