--- a/views/task/index.ejs
+++ b/views/task/index.ejs
@@ -74,8 +74,8 @@
                     確定刪除?
                 </div>
                 <div class="modal-footer">
-                    <button type="button" id="btn-yes" class="btn btn-primary btn-sm" data-bs-dismiss="modal">Yes</button>
-                    <button type="button" id="btn-no" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">No</button>
+                    <button type="button" id="btn-yes" class="btn btn-primary" data-bs-dismiss="modal">Yes</button>
+                    <button type="button" id="btn-no" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
                 </div>
             </div>
             </div>
