appellation align-left

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <h3>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col" style="text-align: left;">
                 Hello, <%= locals.taname.charAt(0).toUpperCase() + locals.taname.slice(1)%>
             </div>
 
